Added product test for Teradata